added expense form

--- a/views/signup.html
+++ b/views/signup.html
@@ -11,16 +11,16 @@
 <body>
     <div class="container p-3 mt-5 d-flex flex-column align-content-center ">
         <h4 id="error">Email already exist!!!</h4>
-        <form class="form">
+        <form  class="form">
             <label class="form-label" for="name">Name</label>
-            <input class="form-control" type="text" id="name" name="name" required>
+            <input class="form-control" type="text" id="name" name="name" required >
             <label class="form-label" for="email">Email</label>
             <input class="form-control" type="email" id="email" name="email" required>
             <label class="form-label" for="password">password</label>
             <input class="form-control" type="password" name="password" id="password" required>
-            <button class="btn btn-primary w-100  mt-3" type="submit">signup</button> 
+            <button class="btn btn-dark w-100  mt-3" type="submit">signup</button> 
         </form>
-        <a class="text-md-center m-2 " href="login.html">click here to login</a>
+        <a class="mt-3" href="login.html">Already a user? Login instead</a>
     </div>
     <script src="../public/js/signup.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
